--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -400,6 +400,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #333333;
   font-family: 'News Cycle', sans-serif; }
 
+/* line 27, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+.code {
+  font-family: 'cousine' sans-serif; }
+
 /* line 1, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 body {
   background-color: #ffffff;
@@ -428,7 +432,7 @@ body {
 /* line 26, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .full {
   width: 90%;
-  margin: 0 5%; }
+  margin: 0 5% 1% 0; }
 
 /* line 32, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .third {
@@ -473,28 +477,28 @@ body {
       opacity: 0;
       -webkit-transition: opacity 1.5s;
       transition: opacity 1.5s; }
-  /* line 77, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+  /* line 76, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
   .marketing .bang:hover {
     opacity: 0.65; }
-    /* line 79, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+    /* line 78, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
     .marketing .bang:hover h2 {
       opacity: 0.85; }
 
-/* line 87, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 86, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .large {
   font-size: 48px; }
 
-/* line 91, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 90, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .fade {
   opacity: 0.75;
   -webkit-transition: opacity 1s;
   transition: opacity 1s; }
 
-/* line 97, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 96, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .fade:hover {
   opacity: 1; }
 
-/* line 101, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 100, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .header-title {
   margin: 5%; }
 
