--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -378,30 +378,33 @@ table {
 
 /* line 6, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 p, ul li, a {
-  font-family: "Roboto", "arial", sans-serif;
-  color: #5b6064; }
+  font-family: "Cabin", sans-serif;
+  opacity: 0.9;
+  color: #5b6064;
+  line-height: 24px;
+  letter-spacing: 0.5px; }
 
-/* line 11, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 14, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 p {
   font-size: 14px; }
 
-/* line 15, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 18, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 a {
   text-decoration: none;
   color: #5b6064;
-  font-family: "Roboto", "arial", sans-serif; }
+  font-family: "Cabin", sans-serif; }
 
-/* line 21, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 24, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 a:hover {
   color: #202020; }
 
-/* line 25, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 28, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: serif;
   color: #222222;
-  font-family: 'News Cycle', sans-serif; }
+  font-family: "Arvo", serif; }
 
-/* line 31, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 34, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 .code {
   font-family: 'cousine' sans-serif; }
 
@@ -505,25 +508,27 @@ body {
   .contact form {
     width: 90%;
     margin: 0 auto;
-    margin-top: 25px;
-    font-family: 'roboto', 'arial', sans-serif; }
-    /* line 8, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
+    margin-top: 25px; }
+    /* line 7, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
     .contact form input, .contact form textarea {
+      font-family: 'Cabin', sans-serif;
+      font-size: 14px;
+      line-height: 24px;
       padding: 10px;
       box-sizing: border-box;
       border: 1px solid #8A8A8A;
       border-radius: 5px; }
-    /* line 14, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
+    /* line 16, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
     .contact form input.name, .contact form input.email {
       width: 45.1%;
       margin: 1%; }
-    /* line 18, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
+    /* line 20, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
     .contact form textarea.message {
       width: 92.5%;
       height: 200px;
       margin: 1%;
       resize: none; }
-    /* line 24, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
+    /* line 26, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
     .contact form input.button {
       float: right;
       margin-right: 6.5%;
@@ -533,7 +538,7 @@ body {
       color: #fff;
       background-color: rgba(126, 126, 126, 0.75);
       transition: background-color 1s; }
-      /* line 33, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
+      /* line 35, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
       .contact form input.button:hover {
         background-color: #595B5D; }
 
