--- a/stylesheets/typography.css
+++ b/stylesheets/typography.css
@@ -1,28 +1,31 @@
 /* line 6, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 p, ul li, a {
-  font-family: "Roboto", "arial", sans-serif;
-  color: #5b6064; }
+  font-family: "Cabin", sans-serif;
+  opacity: 0.9;
+  color: #5b6064;
+  line-height: 24px;
+  letter-spacing: 0.5px; }
 
-/* line 11, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 14, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 p {
   font-size: 14px; }
 
-/* line 15, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 18, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 a {
   text-decoration: none;
   color: #5b6064;
-  font-family: "Roboto", "arial", sans-serif; }
+  font-family: "Cabin", sans-serif; }
 
-/* line 21, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 24, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 a:hover {
   color: #202020; }
 
-/* line 25, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 28, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: serif;
   color: #222222;
-  font-family: 'News Cycle', sans-serif; }
+  font-family: "Arvo", serif; }
 
-/* line 31, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 34, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 .code {
   font-family: 'cousine' sans-serif; }
