New styles, added images, changed header/footer colors

--- a/stylesheets/form.css
+++ b/stylesheets/form.css
@@ -13,28 +13,36 @@
       line-height: 24px;
       padding: 10px;
       box-sizing: border-box;
+      -moz-box-sizing: border-box;
       border: 1px solid #8A8A8A;
       border-radius: 5px; }
-    /* line 16, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
+    /* line 17, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
     .contact form input.name, .contact form input.email {
-      width: 45.1%;
-      margin: 1%; }
-    /* line 20, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
+      width: 45%;
+      margin: 1%;
+      box-sizing: border-box;
+      -moz-box-sizing: border-box; }
+    /* line 24, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
     .contact form textarea.message {
-      width: 92.5%;
+      box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      width: 92%;
       height: 200px;
       margin: 1%;
       resize: none; }
-    /* line 26, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
+    /* line 32, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
     .contact form input.button {
-      float: right;
-      margin-right: 6.5%;
-      margin-top: 2%;
+      box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      width: 93%;
+      margin: 1%;
       border: none;
       padding: 15px 25px;
       color: #fff;
-      background-color: rgba(126, 126, 126, 0.75);
-      transition: background-color 1s; }
-      /* line 35, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
+      background-color: #27AE60;
+      opacity: 0.75;
+      transition: background-color 1s;
+      -moz-transition: background-color 1s; }
+      /* line 44, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
       .contact form input.button:hover {
-        background-color: #595B5D; }
+        background-color: #2ECC71; }
