--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -378,9 +378,9 @@ table {
 
 /* line 6, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 p, ul li, a {
-  font-family: "Cabin", sans-serif;
-  opacity: 0.9;
-  color: #5b6064;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  color: #777777;
   line-height: 24px;
   letter-spacing: 0.5px; }
 
@@ -391,8 +391,8 @@ p {
 /* line 18, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 a {
   text-decoration: none;
-  color: #5b6064;
-  font-family: "Cabin", sans-serif; }
+  color: #777777;
+  font-family: "Lato", Helvetica, Arial, sans-serif; }
 
 /* line 24, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 a:hover {
@@ -401,10 +401,19 @@ a:hover {
 /* line 28, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 h1, h2, h3, h4, h5, h6 {
   font-family: serif;
-  color: #222222;
+  color: #6f6e6e;
   font-family: "Arvo", serif; }
 
-/* line 34, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+/* line 35, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+.header h1 {
+  color: #F3F3F3; }
+/* line 38, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
+.header li a {
+  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  color: #F3F3F3; }
+
+/* line 45, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/typography.scss */
 .code {
   font-family: 'cousine' sans-serif; }
 
@@ -412,9 +421,11 @@ h1, h2, h3, h4, h5, h6 {
 body {
   background-color: #ffffff;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  min-width: 320px;
+  max-width: 1280px; }
 
-/* line 7, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 9, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .wrap {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -424,82 +435,129 @@ body {
   border-right: 1px solid #333333;
   border-left: 1px solid #333333; }
 
-/* line 16, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 18, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .main {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   /* Firefox */
   float: left;
   width: 100%;
-  margin: 0 0 100px 0; }
+  margin: 0 0 100px 0;
+  padding: 50px 0 0 0; }
 
-/* line 26, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 29, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .full {
   width: 90%;
   margin: 0 5% 1% 0; }
 
-/* line 32, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 35, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .third {
   width: 20%;
   margin: 5% 0 10% 10%;
   float: left; }
-  /* line 37, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+  /* line 40, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
   .third h2 {
     text-align: center;
     margin: 0 0 35px 0;
-    padding: 0 20px 0 0; }
-  /* line 42, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+    margin: 15px 0 35px 0; }
+  /* line 45, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
   .third img {
     margin: 0 auto;
     margin-left: 13%;
     padding-right: 18px;
-    display: block; }
+    display: block;
+    opacity: 0.75;
+    transition: opacity 1s; }
+    /* line 52, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+    .third img:hover {
+      opacity: 1.0; }
 
-/* line 52, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 61, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+figure img {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  width: 65%;
+  display: block;
+  margin: 0 auto;
+  margin-top: 50px;
+  margin-bottom: 50px; }
+/* line 70, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+figure figcaption {
+  text-align: center;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  color: #777777; }
+
+/* line 80, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .large {
   font-size: 48px; }
 
-/* line 56, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 84, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .fade {
-  opacity: 0.75;
+  opacity: 0.85;
   -webkit-transition: opacity 2s;
   transition: opacity 2s; }
 
-/* line 62, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 90, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .fade:hover {
   opacity: 1; }
 
-/* line 66, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 94, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .header-title {
   margin: 5%; }
 
 /* line 3, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/header.scss */
 .header {
-  background-color: white;
-  width: 100%;
-  border-bottom: 1px solid #222;
-  border-bottom-width: 95%; }
-  /* line 8, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/header.scss */
+  background-color: #222222;
+  width: 100%; }
+  /* line 6, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/header.scss */
   .header nav {
     height: 250px; }
-  /* line 12, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/header.scss */
+  /* line 10, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/header.scss */
   .header h1 {
     float: left;
     display: inline;
     padding: 90px 0 0 10%;
     margin: 0; }
-  /* line 19, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/header.scss */
+  /* line 17, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/header.scss */
   .header ul {
     float: right;
     display: inline;
-    padding: 116px 7% 0 0;
+    padding: 95px 7% 0 0;
     margin: 0; }
-  /* line 26, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/header.scss */
-  .header ul li {
-    float: left;
+    /* line 22, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/header.scss */
+    .header ul li {
+      float: left;
+      display: inline;
+      padding: 0 40px 0 0;
+      margin: 0; }
+
+/* line 1, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
+.footer {
+  width: 100%;
+  height: 215px;
+  clear: both;
+  margin: 0 auto;
+  background-color: #222222; }
+  /* line 7, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
+  .footer h2 {
+    text-align: center;
+    padding-top: 70px;
+    color: #F3F3F3; }
+  /* line 12, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
+  .footer ul {
+    margin: 0;
+    padding: 0;
+    text-align: center; }
+  /* line 17, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
+  .footer ul li {
+    text-decoration: none;
     display: inline;
-    padding: 0 40px 0 0;
+    padding: 0;
     margin: 0; }
+  /* line 23, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
+  .footer a {
+    color: #F3F3F3; }
 
 /* line 1, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
 .contact {
@@ -516,121 +574,112 @@ body {
       line-height: 24px;
       padding: 10px;
       box-sizing: border-box;
+      -moz-box-sizing: border-box;
       border: 1px solid #8A8A8A;
       border-radius: 5px; }
-    /* line 16, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
+    /* line 17, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
     .contact form input.name, .contact form input.email {
-      width: 45.1%;
-      margin: 1%; }
-    /* line 20, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
+      width: 45%;
+      margin: 1%;
+      box-sizing: border-box;
+      -moz-box-sizing: border-box; }
+    /* line 24, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
     .contact form textarea.message {
-      width: 92.5%;
+      box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      width: 92%;
       height: 200px;
       margin: 1%;
       resize: none; }
-    /* line 26, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
+    /* line 32, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
     .contact form input.button {
-      float: right;
-      margin-right: 6.5%;
-      margin-top: 2%;
+      box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      width: 93%;
+      margin: 1%;
       border: none;
       padding: 15px 25px;
       color: #fff;
-      background-color: rgba(126, 126, 126, 0.75);
-      transition: background-color 1s; }
-      /* line 35, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
+      background-color: #27AE60;
+      opacity: 0.75;
+      transition: background-color 1s;
+      -moz-transition: background-color 1s; }
+      /* line 44, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/form.scss */
       .contact form input.button:hover {
-        background-color: #595B5D; }
-
-/* line 1, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
-.footer {
-  width: 100%;
-  height: 215px;
-  clear: both;
-  margin: 0 auto; }
-  /* line 6, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
-  .footer h2 {
-    text-align: center;
-    border-top: 1px solid #333333;
-    padding-top: 70px; }
-  /* line 11, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
-  .footer ul {
-    margin: 0;
-    padding: 0;
-    text-align: center; }
-  /* line 16, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
-  .footer ul li {
-    text-decoration: none;
-    display: inline;
-    padding: 0;
-    margin: 0; }
+        background-color: #2ECC71; }
 
 @media (max-width: 1200px) {
-  /* line 8, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 4, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .third {
     width: 90%;
     margin: 0 5% 0 5%;
     padding: 0; }
-    /* line 12, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+    /* line 8, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
     .third img {
       margin: 0 auto;
       display: block; } }
 @media (max-width: 860px) {
-  /* line 21, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 17, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .header-margin {
     margin-left: 5%; }
 
-  /* line 25, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 21, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .wrap {
     width: 100%; }
 
-  /* line 29, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 25, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .full {
     width: 90%;
     margin: 0 auto; }
 
-  /* line 35, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 31, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  figure img {
+    width: 90%; }
+
+  /* line 37, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .header h1 {
-    float: initial;
     display: block;
     text-align: center;
     padding: 80px 0 0 0;
-    margin: 0; }
-  /* line 43, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+    margin: 0 0 0 1%; }
+  /* line 44, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .header ul {
-    float: initial;
     display: block;
     text-align: center;
-    padding: 0 0 0 1.25%;
+    padding: 90px 0% 0 0;
     margin: 0; }
   /* line 50, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .header ul li {
     float: initial;
-    padding: 0;
     margin: 0; }
-    /* line 54, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
-    .header ul li a {
-      padding: 0 3% 0 0; }
 
-  /* line 60, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 57, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .contact form input.name, .contact form input.email {
     display: block;
     width: 92.5%;
     margin-bottom: 15px; } }
 @media (max-width: 650px) {
-  /* line 69, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 66, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .marketing {
     background: url("../images/marketing.jpg") no-repeat -77px 0;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover; }
-
-  /* line 78, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
-  .header ul li {
-    display: inline; } }
+    background-size: cover; } }
+@media (max-width: 600px) {
+  /* line 77, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  .header h1 {
+    float: none; }
+  /* line 80, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  .header ul {
+    float: none;
+    margin: 0 auto;
+    padding: 10px 0 0 0; }
+    /* line 84, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+    .header ul li {
+      padding: 0 5px 0 0; } }
 @media (max-width: 450px) {
-  /* line 85, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 93, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .marketing {
     background: url("../images/marketing.jpg") no-repeat -150px 0;
     -webkit-background-size: cover;
@@ -638,6 +687,6 @@ body {
     -o-background-size: cover;
     background-size: cover; }
 
-  /* line 92, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 100, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .large {
     font-size: 36px; } }
