--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -2,9 +2,11 @@
 body {
   background-color: #ffffff;
   padding: 0;
-  margin: 0; }
+  margin: 0;
+  min-width: 320px;
+  max-width: 1280px; }
 
-/* line 7, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 9, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .wrap {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -14,51 +16,73 @@ body {
   border-right: 1px solid #333333;
   border-left: 1px solid #333333; }
 
-/* line 16, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 18, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .main {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   /* Firefox */
   float: left;
   width: 100%;
-  margin: 0 0 100px 0; }
+  margin: 0 0 100px 0;
+  padding: 50px 0 0 0; }
 
-/* line 26, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 29, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .full {
   width: 90%;
   margin: 0 5% 1% 0; }
 
-/* line 32, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 35, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .third {
   width: 20%;
   margin: 5% 0 10% 10%;
   float: left; }
-  /* line 37, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+  /* line 40, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
   .third h2 {
     text-align: center;
     margin: 0 0 35px 0;
-    padding: 0 20px 0 0; }
-  /* line 42, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+    margin: 15px 0 35px 0; }
+  /* line 45, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
   .third img {
     margin: 0 auto;
     margin-left: 13%;
     padding-right: 18px;
-    display: block; }
+    display: block;
+    opacity: 0.75;
+    transition: opacity 1s; }
+    /* line 52, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+    .third img:hover {
+      opacity: 1.0; }
 
-/* line 52, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 61, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+figure img {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  width: 65%;
+  display: block;
+  margin: 0 auto;
+  margin-top: 50px;
+  margin-bottom: 50px; }
+/* line 70, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+figure figcaption {
+  text-align: center;
+  font-family: "Lato", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  color: #777777; }
+
+/* line 80, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .large {
   font-size: 48px; }
 
-/* line 56, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 84, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .fade {
-  opacity: 0.75;
+  opacity: 0.85;
   -webkit-transition: opacity 2s;
   transition: opacity 2s; }
 
-/* line 62, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 90, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .fade:hover {
   opacity: 1; }
 
-/* line 66, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 94, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .header-title {
   margin: 5%; }
