--- a/stylesheets/footer.css
+++ b/stylesheets/footer.css
@@ -3,20 +3,24 @@
   width: 100%;
   height: 215px;
   clear: both;
-  margin: 0 auto; }
-  /* line 6, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
+  margin: 0 auto;
+  background-color: #222222; }
+  /* line 7, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
   .footer h2 {
     text-align: center;
-    border-top: 1px solid #333333;
-    padding-top: 70px; }
-  /* line 11, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
+    padding-top: 70px;
+    color: #F3F3F3; }
+  /* line 12, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
   .footer ul {
     margin: 0;
     padding: 0;
     text-align: center; }
-  /* line 16, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
+  /* line 17, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
   .footer ul li {
     text-decoration: none;
     display: inline;
     padding: 0;
     margin: 0; }
+  /* line 23, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/footer.scss */
+  .footer a {
+    color: #F3F3F3; }
