added content and .two class

--- a/stylesheets/base.css
+++ b/stylesheets/base.css
@@ -31,31 +31,50 @@ body {
   width: 100%;
   margin: 0 5% 2% 0; }
 
-/* line 35, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 34, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+.row {
+  width: 100%;
+  clear: both; }
+
+/* line 39, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+.third, .two {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  float: left;
+  display: block; }
+  /* line 45, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+  .third h2, .third h3, .two h2, .two h3 {
+    text-align: center; }
+
+/* line 51, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .third {
   width: 20%;
-  margin: 5% 0 10% 10%;
-  float: left; }
-  /* line 39, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+  margin: 5% 0 10% 10%; }
+  /* line 54, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
   .third h2 {
-    text-align: center;
     margin: 0 0 35px 0;
     margin: 15px 0 35px 0; }
-  /* line 45, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+  /* line 59, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
   .third .icon-container {
     width: 130px;
     height: 130px;
     margin: 0 auto; }
-    /* line 49, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+    /* line 63, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
     .third .icon-container img {
       display: block;
       opacity: 0.55;
       transition: opacity 1s; }
-      /* line 53, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+      /* line 67, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
       .third .icon-container img:hover {
         opacity: 1.0; }
 
-/* line 63, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 76, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+.two {
+  width: 40%;
+  margin: 5%; }
+
+/* line 84, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 figure img {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -65,31 +84,31 @@ figure img {
   margin-top: 50px;
   margin-bottom: 50px; }
 
-/* line 76, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 97, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .large {
   font-size: 48px; }
 
-/* line 80, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 101, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .fade {
   opacity: 0.85;
   -webkit-transition: opacity 2s;
   transition: opacity 2s; }
 
-/* line 86, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 107, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .fade:hover {
   opacity: 1; }
 
-/* line 90, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 111, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .header-title {
   margin: 5%; }
 
-/* line 94, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 115, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .one-edge-shadow {
   -webkit-box-shadow: 0 8px 6px -6px black;
   -moz-box-shadow: 0 8px 6px -6px black;
   box-shadow: 0 8px 6px -6px black; }
 
-/* line 100, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 121, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .round-all {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
