--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -450,31 +450,50 @@ body {
   width: 100%;
   margin: 0 5% 2% 0; }
 
-/* line 35, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 34, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+.row {
+  width: 100%;
+  clear: both; }
+
+/* line 39, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+.third, .two {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  float: left;
+  display: block; }
+  /* line 45, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+  .third h2, .third h3, .two h2, .two h3 {
+    text-align: center; }
+
+/* line 51, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .third {
   width: 20%;
-  margin: 5% 0 10% 10%;
-  float: left; }
-  /* line 39, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+  margin: 5% 0 10% 10%; }
+  /* line 54, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
   .third h2 {
-    text-align: center;
     margin: 0 0 35px 0;
     margin: 15px 0 35px 0; }
-  /* line 45, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+  /* line 59, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
   .third .icon-container {
     width: 130px;
     height: 130px;
     margin: 0 auto; }
-    /* line 49, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+    /* line 63, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
     .third .icon-container img {
       display: block;
       opacity: 0.55;
       transition: opacity 1s; }
-      /* line 53, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+      /* line 67, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
       .third .icon-container img:hover {
         opacity: 1.0; }
 
-/* line 63, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 76, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+.two {
+  width: 40%;
+  margin: 5%; }
+
+/* line 84, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 figure img {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -484,31 +503,31 @@ figure img {
   margin-top: 50px;
   margin-bottom: 50px; }
 
-/* line 76, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 97, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .large {
   font-size: 48px; }
 
-/* line 80, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 101, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .fade {
   opacity: 0.85;
   -webkit-transition: opacity 2s;
   transition: opacity 2s; }
 
-/* line 86, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 107, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .fade:hover {
   opacity: 1; }
 
-/* line 90, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 111, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .header-title {
   margin: 5%; }
 
-/* line 94, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 115, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .one-edge-shadow {
   -webkit-box-shadow: 0 8px 6px -6px black;
   -moz-box-shadow: 0 8px 6px -6px black;
   box-shadow: 0 8px 6px -6px black; }
 
-/* line 100, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
+/* line 121, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/base.scss */
 .round-all {
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
@@ -628,46 +647,56 @@ figure img {
       display: block; } }
 @media (max-width: 860px) {
   /* line 17, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  .two {
+    width: 90%;
+    margin: 5% 5% 0 5%;
+    padding: 0; }
+    /* line 21, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+    .two p {
+      width: 90%;
+      margin: 0 auto; }
+
+  /* line 27, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .header-margin {
     margin-left: 5%; }
 
-  /* line 21, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 31, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .wrap {
     width: 100%; }
 
-  /* line 25, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 35, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .full {
     width: 90%;
     margin: 0 auto; }
 
-  /* line 31, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 41, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   figure img {
     width: 90%; }
 
-  /* line 37, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 47, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .header h1 {
     display: block;
     text-align: center;
     padding: 80px 0 0 0;
     margin: 0 0 0 1%; }
-  /* line 44, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 54, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .header ul {
     display: block;
     text-align: center;
     padding: 90px 0% 0 0;
     margin: 0; }
-  /* line 50, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 60, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .header ul li {
     float: initial;
     margin: 0; }
 
-  /* line 57, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 67, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .contact form input.name, .contact form input.email {
     display: block;
     width: 92.5%;
     margin-bottom: 15px; } }
 @media (max-width: 650px) {
-  /* line 66, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 76, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .marketing {
     background: url("../images/marketing.jpg") no-repeat -77px 0;
     -webkit-background-size: cover;
@@ -675,19 +704,19 @@ figure img {
     -o-background-size: cover;
     background-size: cover; } }
 @media (max-width: 600px) {
-  /* line 77, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 87, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .header h1 {
     float: none; }
-  /* line 80, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 90, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .header ul {
     float: none;
     margin: 0 auto;
     padding: 10px 0 0 0; }
-    /* line 84, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+    /* line 94, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
     .header ul li {
       padding: 0 5px 0 0; } }
 @media (max-width: 450px) {
-  /* line 93, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 103, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .marketing {
     background: url("../images/marketing.jpg") no-repeat -150px 0;
     -webkit-background-size: cover;
@@ -695,6 +724,6 @@ figure img {
     -o-background-size: cover;
     background-size: cover; }
 
-  /* line 100, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
+  /* line 110, /Users/thomasberry/Desktop/development/responsive-personal-site/source/stylesheets/mediaquery.scss */
   .large {
     font-size: 36px; } }
